--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
   "dependencies": {
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-router": "^6.2.1",
+    "sort-by": "^1.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -32,6 +39,7 @@
     "gh-pages": "^6.1.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
+    "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   }
